# hydrator

./: .dockerignore  CHANGELOG.md  COPYRIGHT  Dockerfile  README.md  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-setuptools.in  requirements-setuptools.txt  requirements.in  requirements.txt
.github/workflows/: test-app.yaml  test-docker-build.yaml  test.yaml
src/hydrate/: __init__.py  __main__.py  cli.py  exc.py  hydration.py  krm.py  oci_registry.py  process.py  types.py  validator.py
src/hydrator/: __init__.py  __main__.py  cli.py  hydration.py  krm.py  oci_registry.py  process.py  types.py  util.py  validator.py
tests/: test_cluster_async.py  test_cluster_cli.py
tests/assets/default_overlays/: sot.csv
tests/assets/default_overlays/base_library/clusterdns/: clusterdns.yaml.j2  kustomization.yaml
tests/assets/default_overlays/base_library/vmruntime/: enable-vmruntime.yaml
tests/assets/group_valid/: sot.csv
tests/assets/group_valid/base_library/robin/: robin-cli-pod.yaml  robin-snapshotclass.yaml
tests/assets/group_valid/overlays/nonprod-us/: kustomization.yaml.j2
tests/assets/group_valid/overlays/prod-us/: kustomization.yaml.j2
tests/assets/platform_invalid/: sot_invalid_header.csv  sot_invalid_missing_group.csv  sot_invalid_missing_name.csv  sot_invalid_missing_tags.csv  sot_invalid_random_bytes.csv  sot_valid.csv
tests/assets/platform_valid_async/: sot.csv
tests/assets/platform_valid_async_perf_testing/: base_library  overlays  sot.csv  validation-gatekeeper
(+33 files in other folders)
