[build-system]
requires = ["setuptools>78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrator"
authors = [
    { name = "Paul Durivage", email = "durivage@google.com" },
    { name = "Kevin Park", email = "kevinpmwpark@google.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
version = "2.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
optional-dependencies.dev = { file = ["requirements-dev.in"] }

[project.scripts]
hydrate = "hydrator.__main__:main"
hydrator = "hydrator.__main__:main"

[tool.pip-tools]
generate-hashes = true
